# labby

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  Labby for Unraid.html  README.md  deny.toml  design-qa.md  docker-compose.prod.yml  docker-compose.yml  manifest  package-lock.json  release-please-config.json  rust-toolchain.toml  server.json
.cargo/: config.toml
.claude-plugin/: marketplace.json
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  06-remediation.md  state.json
.github/: CLAUDE.md  actionlint.yaml
config/: Dockerfile  Dockerfile.fast  config.example.toml
crates/labby/: CLAUDE.md  Cargo.toml  README.md
crates/labby-codemode/: CLAUDE.md  Cargo.toml  build.rs  plugin.sha256
crates/labby-codemode/build-support/: Cargo.toml
crates/labby-codemode/build-support/src/: lib.rs
crates/labby-codemode/javy-plugin/: Cargo.toml
crates/labby-codemode/javy-plugin/src/: lib.rs
crates/labby-codemode/src/: artifacts.rs  broker.rs  config.rs  execute.rs  host.rs  lib.rs  local_provider.rs  normalize.rs  pool.rs  preamble.rs  protocol.rs  runner.rs  runner_drive.rs  runner_exe.rs  runner_io.rs  schema.rs  shape.rs  state.rs  tests_ids_schema.rs  tests_normalize.rs  trace.rs  truncate.rs  types.rs  wasm_bridge.rs  wasm_codegen.rs  wasm_plugin.rs  wasm_runner.rs  wrapper.rs
crates/labby-codemode/src/git/: command.rs  provider.rs
crates/labby-codemode/src/pool/: config.rs  runner_handle.rs
crates/labby-codemode/src/runner_drive/: artifacts.rs  finalize.rs  steps.rs
crates/labby-codemode/src/snippet/: store.rs
crates/labby-codemode/src/state/: path.rs  provider.rs  workspace.rs
crates/labby-openapi/: CLAUDE.md  Cargo.toml
crates/labby-openapi/src/: config.rs  convert.rs  dispatch.rs  error.rs  http.rs  lib.rs  registry.rs  ssrf.rs  tests_config.rs  tests_dispatch.rs  tests_ssrf.rs
crates/labby-openapi/tests/: live_petstore.rs
crates/labby/src/: api.rs  app_assets.rs  app_manifest.rs  catalog.rs  cli.rs  codemode.rs  codemode_test_harness.rs  composition.rs  config.rs  dispatch.rs  entrypoint.rs  lib.rs  live_gateway.rs  main.rs  mcp.rs  oauth.rs  registry.rs
crates/labby/src/api/: CLAUDE.md  app_routes.rs  browser_session.rs  dev_mockup.rs  error.rs  health.rs  host_validation.rs  openapi.rs  router.rs  router_middleware.rs  services.rs  state.rs  upstream_oauth.rs  web.rs
crates/labby/src/api/services/: catalog.rs  doctor.rs  helpers.rs  oauth_relay.rs  palette.rs  server_logs.rs  setup.rs  snippets.rs
crates/labby/src/cli/: doctor.rs  gateway.rs  health.rs  helpers.rs  incus.rs  marketplace.rs  oauth.rs  serve.rs  setup.rs  update.rs
crates/labby/src/cli/gateway/: args.rs  code.rs  dispatch.rs  list.rs  oauth.rs  remote.rs
crates/labby/src/codemode/: decider.rs  sqlite_pauses.rs
crates/labby/src/config/: env_merge.rs  env_writer.rs  paths.rs  secret_files.rs
crates/labby/src/dispatch/: CLAUDE.md  doctor.rs  error.rs  helpers.rs  marketplace.rs  server_logs.rs  setup.rs  snippets.rs
crates/labby/src/dispatch/deploy/: build.rs
crates/labby/src/dispatch/doctor/: catalog.rs  dispatch.rs  params.rs  proxy.rs  relay.rs  service.rs  system.rs  types.rs
crates/labby/src/dispatch/fs/: catalog.rs
crates/labby/src/dispatch/gateway/: config_store.rs
crates/labby/src/dispatch/lab_admin/: catalog.rs
crates/labby/src/dispatch/marketplace/: mcp_catalog.rs  store.rs  update.rs
crates/labby/src/dispatch/server_logs/: catalog.rs  client.rs  dispatch.rs  params.rs
crates/labby/src/dispatch/setup/: bootstrap.rs  catalog.rs  claude_plugins.rs  client.rs  dispatch.rs  draft.rs  host_service.rs  incus.rs  params.rs  plugin_hook.rs  provision.rs  secret_mask.rs  settings.rs  state.rs  types.rs
crates/labby/src/dispatch/snippets/: catalog.rs  dispatch.rs
crates/labby/src/dispatch/stash/: import.rs
crates/labby/src/docs/: action_catalog.rs  projection.rs  render.rs  routes.rs  types.rs
crates/labby/src/log_fmt/: formatter.rs
crates/labby/src/mcp/: CLAUDE.md  bridge.rs  call_tool.rs  call_tool_codemode.rs  call_tool_upstream.rs  catalog.rs  catalog_notifications.rs  completion.rs  context.rs  elicitation.rs  error.rs  handlers_prompts.rs  handlers_resources.rs  handlers_tools.rs  in_process_peer.rs  logging.rs  pagination.rs  peers.rs  prompts.rs  resource_proxy.rs  result_format.rs  route_scope.rs  server.rs  services.rs  upstream.rs
crates/labby/src/mcp/assets/: add_server_app.html  code_mode_app.html  gateway_status_app.html  server_logs_app.html
crates/labby/src/mcp/call_tool_codemode/: tests.rs
crates/labby/src/mcp/completion/: tests.rs
crates/labby/src/mcp/context/: tests.rs
crates/labby/src/mcp/handlers_tools/: tests.rs
crates/labby/src/mcp/result_format/: tests.rs
crates/labby/src/mcp/services/: fs.rs  snippets.rs
crates/labby/src/mcp/upstream/: tests.rs
crates/labby/src/net/: backoff.rs
crates/labby/src/node/: update.rs
crates/labby/src/node/log_store/: log_store_tests.rs
crates/labby/src/oauth/: error.rs  header_filter.rs  local_relay.rs  public_relay.rs  target.rs
crates/labby/src/oauth/public_relay/: forward.rs  manager.rs  policy.rs  store.rs  types.rs
crates/labby/src/observability/: activity.rs
crates/labby/src/output/: theme.rs
crates/labby/tests/: architecture_boundaries.rs  architecture_orchestrator.rs  auth_admin_api.rs  ci_changed_paths.rs  code_mode_full_stack.rs  code_mode_runner.rs  deploy_runner.rs  device_api.rs  device_cli.rs  device_config.rs  device_master_only.rs  device_queue.rs  device_runtime.rs  gateway_stdio_spawn.rs  logs_cli.rs  node_config.rs  node_identity.rs  node_queue.rs  nodes_api.rs  nodes_cli.rs  nodes_master_only.rs  nodes_runtime.rs  observability.rs  support.rs  upstream_oauth.rs  windows_job_object_reaping.rs
docs/: ARCH.md  CHANGELOG.md  CONVENTIONS.md  OPERATIONS.md  PLUGINS.md  README.md  code-mode-cloudflare-enhancements.md  destructive-gate-admin-scope-bug.md  (+3 more)
openwiki/: domain.md  (+4 more)
(+1134 files in other folders)
