[package]
name = "labby-codemode"
description = "Client-neutral Code Mode JavaScript execution kernel (Javy/QuickJS sandbox runner, broker, result shaping, and snippet engine) injected with a tool source via the CodeModeHost trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["homelab", "mcp", "sandbox", "javascript", "codemode"]
categories = ["development-tools"]
publish = false

[dependencies]
labby-runtime = { path = "../labby-runtime" }

tokio = { workspace = true, features = ["process", "sync"] }
futures.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
tracing.workspace = true

tempfile = "3.27"
ulid = "1"
sha2 = "0.11"
hex = "0.4"
regex = "1"
tar = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
url.workspace = true
walrus = "0.25.2"
lru = "0.16"

# `anyhow` is limited to Javy codegen / Wasmtime setup boundaries; normal
# caller-facing errors still use `ToolError`.
anyhow = "1"

# Wasmtime dual-sandbox spike path. The published `javy-codegen = 4.0.0`
# depends on Wasmtime/WASI 42 and fails the current RustSec gates. Javy v9 tags
# an unpublished `javy-codegen = 4.0.1-alpha.1`; keep it pinned to the release
# tag and force the patched Wasmtime/WASI 45 line during the spike.
javy-codegen = { git = "https://github.com/bytecodealliance/javy", tag = "v9.0.0", version = "4.0.1-alpha.1" }
deterministic-wasi-ctx = "=4.0.3"
wasmtime = "=45.0.3"
wasmtime-wasi = "=45.0.3"
wasmtime-wizer = { version = "=45.0.3", features = ["wasmtime"] }

# JavaScript AST normalization (export-shape detection in normalize.rs).
boa_ast = "0.21.1"
boa_interner = "0.21.1"
boa_parser = "0.21.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = [
  "signal",
  "process",
  "user",
] }

[target.'cfg(windows)'.dependencies]
# Windows Job Object process-tree reaping. The raw FFI lives in `labby-winjob`
# (the sanctioned unsafe crate), so `labby-codemode` stays unsafe-free under the
# workspace `unsafe_code = "forbid"` lint.
labby-winjob = { path = "../labby-winjob" }

[dev-dependencies]
tempfile.workspace = true
wat = "1.252.0"

[build-dependencies]
labby-codemode-build-support = { path = "build-support" }

[lints]
workspace = true
