[package]
name = "labby-openapi"
description = "OpenAPI-spec-to-Code-Mode-tool derivation. Extracts allowlisted operations and executes outbound HTTP via its own hardened reqwest client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
publish = false

[dependencies]
labby-runtime = { path = "../labby-runtime" }
labby-primitives = { path = "../labby-primitives" }
tokio = { workspace = true, features = ["sync", "time", "rt", "net"] }
reqwest = { workspace = true }
rustls.workspace = true
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[lints]
workspace = true
