[package]
name = "labby"
description = "Rust homelab control plane and Labby MCP gateway for agents, plugins, registries, stash workspaces, setup, logs, and fleet operations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["mcp", "gateway", "homelab", "labby", "agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "labby"
path = "src/main.rs"
test = false

[dependencies]
labby-auth = { path = "../labby-auth", features = ["http-axum", "upstream-oauth-rmcp"] }
labby-primitives = { path = "../labby-primitives" }
labby-runtime = { path = "../labby-runtime" }
labby-codemode = { path = "../labby-codemode", optional = true }
labby-gateway = { path = "../labby-gateway", optional = true }
labby-openapi = { path = "../labby-openapi", optional = true }
labby-web = { path = "../labby-web", optional = true }

tokio = { workspace = true, features = ["process"] }
process-wrap = { version = "9.1.0", default-features = false, features = [
  "tokio1",
  "process-group",
] }
nix = { version = "0.31", default-features = false, features = [
  "signal",
  "process",
  "user",
] }
futures.workspace = true
reqwest.workspace = true
# Direct dep (not just transitive via reqwest) so entrypoint.rs can install
# the process-wide ring crypto provider at startup. See the root Cargo.toml
# comment on `reqwest`/`rustls` for why.
rustls.workspace = true
url.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jiff.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true

dotenvy.workspace = true
toml.workspace = true
dirs = "5"


base64.workspace = true
fd-lock = "4"
tempfile = "3.27"
subtle = "2"
sha2 = "0.11"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hmac.workspace = true
chacha20poly1305 = "0.10"
dashmap = "6"
diffy-imara = "0.3"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt", "compat", "codec"] }
strip-ansi-escapes = "0.2"

hex = "0.4"
getrandom = "0.4"
ulid = "1"

rmcp.workspace = true
# Transport-layer body-cap wrapper (dispatch/upstream/http_client.rs) uses
# bytes::Bytes and sse-stream::SseStream directly. `http` types come in via
# reqwest::header (already a direct dep).
bytes = "1"
sse-stream = "0.2"
rusqlite.workspace = true
uuid.workspace = true

axum.workspace = true
http-body-util.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa = { workspace = true, optional = true }

oauth2 = { version = "5.0", default-features = false }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# optional — fs feature (workspace filesystem browser)
walkdir = { version = "2", optional = true }
globset = { version = "0.4", optional = true }
unicode-normalization = { version = "0.1", optional = true }
rustix = { version = "1", features = ["fs"], optional = true }
toml_edit = "0.23"

[target.'cfg(unix)'.dependencies]
sd-notify = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
# Windows Job Object process-tree reaping. The raw `windows-sys` FFI lives in
# `labby-winjob` (the sanctioned unsafe crate), so `lab` stays unsafe-free and
# keeps the workspace `unsafe_code = "forbid"` lint. This mirrors how the Unix
# path routes its unsafe through the external `nix` crate.
labby-winjob = { path = "../labby-winjob" }

[dev-dependencies]
labby-auth = { path = "../labby-auth", features = ["http-axum", "upstream-oauth-rmcp"] }
wiremock.workspace = true
proptest = "1"

[lib]
path = "src/lib.rs"

# Feature-slice contract:
# - `default` is the production gateway host package.
# - `all` means all remaining supported Labby host features, not retired product surfaces.
# - Product slices must compile with `--no-default-features --features <slice> --all-targets`.
# - Retired product surfaces (ACP, deploy, fleet/nodes, marketplace, stash) are intentionally
#   deleted from this crate rather than left as sleeping feature gates.
# - Helper/internal features are not standalone product slices unless this comment is updated.
[features]
all = ["lab-admin", "api-docs", "gateway-host", "fs", "systemd"]
gateway = [
  "dep:labby-codemode",
  "dep:labby-gateway",
  "dep:labby-openapi",
  "web-ui",
]
gateway-host = ["gateway"]
web-ui = ["dep:labby-web"]
api-docs = ["dep:utoipa"]
default = ["gateway-host"]
fs = ["dep:walkdir", "dep:globset", "dep:unicode-normalization", "dep:rustix"]
lab-admin = []
systemd = ["dep:sd-notify"]
[lints]
workspace = true
